--- a/templates/layout.html
+++ b/templates/layout.html
@@ -49,6 +49,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="{{ url_for('static',filename='main.js') }}"></script>
-    <script src="static/iconfont.js"></script>
+    <script src="{{ url_for('static',filename='iconfont.js') }}"></script>
   </body>
 </html>
