--- a/static/home.css
+++ b/static/home.css
@@ -23,3 +23,12 @@
 .web_selected:focus {
   box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
 }
+
+.attributes {
+  padding-left: 15%;
+  background-color: #e9f1f7;
+}
+
+.Startbtn {
+  margin-left: 40%;
+}
