--- a/templates/home.html
+++ b/templates/home.html
@@ -1,14 +1,19 @@
-{% extends "layout.html" %} {% block css %}
+{% extends "layout.html" %}
+
+<!-- 导入css -->
+{% block css %}
 <link
   rel="stylesheet"
   type="text/css"
   href="{{ url_for('static',filename='home.css') }}"
 />
-{% endblock %} {% block content %}
+{% endblock %}
+
+<!-- 具体内容 -->
+{% block content %}
 <!-- 搜索框，以及开始爬虫按钮 -->
 <div class="filter pb-5">
-  <div class="row g-3 ms-auto pt-sm-5 pt-md-0 pb-4">
-    <div class="col-1"></div>
+  <div class="row g-3 pt-sm-5 pt-md-0 pb-4">
     <div class="col-8">
       <input
         type="text"
@@ -17,10 +22,9 @@
       />
     </div>
     <div class="col-3">
-      <a href="/category/体育">
-        <button type="button" class="btn Addbtn">添加站点</button>
-      </a>
+      <button type="button" class="btn Addbtn ms-auto">添加站点</button>
     </div>
+    <div class="col-1"></div>
   </div>
 </div>
 
@@ -68,6 +72,43 @@
     </div>
   </div>
 </div>
-{% endblock content %} {% block scripts %}
+
+<!-- 选择爬取具体属性，开始爬取 -->
+<div class="attributes py-5">
+  <div class="row g-2 px-5">
+    <div class="col-md-3 col-sm-3">
+      <input type="checkbox" class="check_btn" id="btncheck1" checked ='checked'/>
+      <label class="btn check_label" for="btncheck1">标题</label>
+    </div>
+    <div class="col-md-3 col-sm-3">
+      <input type="checkbox" class="check_btn" id="btncheck2" checked ='checked'/>
+      <label class="btn check_label" for="btncheck2">正文</label>
+    </div>
+    <div class="col-md-3 col-sm-3">
+      <input type="checkbox" class="check_btn" id="btncheck3" checked ='checked'/>
+      <label class="btn check_label" for="btncheck3">来源</label>
+    </div>
+    <div class="col-md-3 col-sm-3">
+      <input type="checkbox" class="check_btn" id="btncheck4" checked ='checked'/>
+      <label class="btn check_label" for="btncheck4">点赞数</label>
+    </div>
+    <div class="col-md-3 col-sm-3">
+      <input type="checkbox" class="check_btn" id="btncheck5" checked ='checked'/>
+      <label class="btn check_label" for="btncheck5">评论数</label>
+    </div>
+    <div class="col-md-3 col-sm-3">
+      <input type="checkbox" class="check_btn" id="btncheck6" checked ='checked'/>
+      <label class="btn check_label" for="btncheck6">阅读数</label>
+    </div>
+  </div>
+  <div class="pt-2">
+    <button type="button" class="btn Addbtn Startbtn">
+      <a href="/category/体育"> 开始爬取</a>
+  </div>
+</div>
+{% endblock content %}
+
+<!-- 导入js -->
+{% block scripts %}
 <script src="{{ url_for('static',filename='home.js') }}"></script>
 {% endblock %}
