--- a/templates/home.html
+++ b/templates/home.html
@@ -77,28 +77,39 @@
 <div class="attributes py-5">
   <div class="row g-2 px-5">
     <div class="col-md-3 col-sm-3">
-      <input type="checkbox" class="check_btn" id="btncheck1" checked ='checked'/>
-      <label class="btn check_label" for="btncheck1">标题</label>
+      <input type="checkbox" class="check_btn" id="btncheck1" checked/>
+      <label class="check_label" for="btncheck1"></label>
+      <label for="btncheck1">标题</label>
     </div>
     <div class="col-md-3 col-sm-3">
-      <input type="checkbox" class="check_btn" id="btncheck2" checked ='checked'/>
-      <label class="btn check_label" for="btncheck2">正文</label>
+      <input type="checkbox" class="check_btn" id="btncheck2" checked/>
+      <label class="check_label" for="btncheck2"></label>
+      <label for="btncheck2">正文</label>
     </div>
     <div class="col-md-3 col-sm-3">
-      <input type="checkbox" class="check_btn" id="btncheck3" checked ='checked'/>
-      <label class="btn check_label" for="btncheck3">来源</label>
+      <input type="checkbox" class="check_btn" id="btncheck3" checked/>
+      <label class="check_label" for="btncheck3"></label>
+      <label for="btncheck3">概要</label>
     </div>
     <div class="col-md-3 col-sm-3">
-      <input type="checkbox" class="check_btn" id="btncheck4" checked ='checked'/>
-      <label class="btn check_label" for="btncheck4">点赞数</label>
+      <input type="checkbox" class="check_btn" id="btncheck4" checked/>
+      <label class="check_label" for="btncheck4"></label>
+      <label for="btncheck4">点赞数</label>
     </div>
     <div class="col-md-3 col-sm-3">
-      <input type="checkbox" class="check_btn" id="btncheck5" checked ='checked'/>
-      <label class="btn check_label" for="btncheck5">评论数</label>
+      <input type="checkbox" class="check_btn" id="btncheck5" checked/>
+      <label class="check_label" for="btncheck5"></label>
+      <label for="btncheck5">阅读数</label>
     </div>
     <div class="col-md-3 col-sm-3">
-      <input type="checkbox" class="check_btn" id="btncheck6" checked ='checked'/>
-      <label class="btn check_label" for="btncheck6">阅读数</label>
+      <input type="checkbox" class="check_btn" id="btncheck6" checked/>
+      <label class="check_label" for="btncheck6"></label>
+      <label for="btncheck6">评论数</label>
+    </div>
+    <div class="col-md-3 col-sm-3">
+      <input type="checkbox" class="check_btn" id="btncheck7" checked/>
+      <label class="check_label" for="btncheck7"></label>
+      <label for="btncheck7">来源</label>
     </div>
   </div>
   <div class="pt-2">
