--- a/static/home.css
+++ b/static/home.css
@@ -32,3 +32,41 @@
 .Startbtn {
   margin-left: 40%;
 }
+
+.check_label {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 20px;
+  background-color: #ed6a5a;
+  border-color: #ed6a5a;
+  border-radius: 10px;
+}
+.check_label::before {
+  content: " ";
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  position: absolute;
+  right: 22px;
+  top: 2px;
+  background-color: #fff;
+  transition: all 0.4s ease;
+  cursor: pointer;
+}
+.check_btn {
+  display: none;
+}
+.check_btn:checked + .check_label {
+  background-color: #b0e298;
+  border-color: #b0e298;
+}
+.check_btn:checked + .check_label::before {
+  right: 2px;
+}
+.check_label + label {
+  position: relative;
+  bottom: 4px;
+  left: 3px;
+}
