--- a/templates/layout.html
+++ b/templates/layout.html
@@ -39,7 +39,7 @@
       </div>
     </nav>
 
-    <main class="container-fluid bg-light p-container">
+    <main class="bg-light main-container">
       <!-- '正文'的所有内容放在这里 -->
       {% block content %}{% endblock %}
     </main>
