--- a/templates/home.html
+++ b/templates/home.html
@@ -74,8 +74,8 @@
 </div>
 
 <!-- 选择爬取具体属性，开始爬取 -->
-<div class="attributes py-5">
-  <div class="row g-2 px-5">
+<div class="attributes py-5 pt-4">
+  <div class="row g-2 px-5 pb-1 pt-3">
     <div class="col-md-3 col-sm-3">
       <input type="checkbox" class="check_btn" id="btncheck1" checked/>
       <label class="check_label" for="btncheck1"></label>
