scrape the shit outa it

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,8 +33,8 @@
     <!-- 导航栏 -->
     <nav class="navbar my-dark position-fixed">
       <div class="container-fluid">
-        <a class="navbar-brand mx-4 fw-bold my-brand" href="/">
-          News Scrawler
+        <a class="navbar-brand mx-3 fw-bold my-brand" href="/">
+          Trends Predictor
         </a>
       </div>
     </nav>
